# AmethystCustomRenderPass

./: Cargo.toml  README.md  compile_shaders.ps1
assets/shaders/compiled/fragment/: custom.frag.spv
assets/shaders/compiled/vertex/: custom.vert.spv
assets/shaders/glsl/fragment/: colors.frag  some_colors.frag
assets/shaders/glsl/vertex/: triangle.vert
config/: display.ron
src/: custom_pass.rs  main.rs
