[package]
name = "custom_render"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
amethyst_error = "0.5.0"
derivative = "2.0.2"
glsl-layout = "0.3.2"
lazy_static = "1.4.0"
failure = "0.1.7"
chrono = "0.4.11"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
